bug fixex, smooth scrollbar, rain sound improved

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,13 @@
   /* background: black; */
 }
 
+body{
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+}
+
+
 ::-webkit-scrollbar {
   display: none;
 }
